# inspire

./: Cargo.toml  README.md  example-config.toml
quotes/: quotes.toml
quotes/split/: 0.toml  1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  (+173 more)
src/: config.rs  display.rs  main.rs  quote.rs  quotes.rs  render.rs  style.rs  wrappers.rs
src/quotes/: fortune.rs
